@@ -1,7 +1,7 @@
 package gateways;
 
 //IO
-import entities.Student;
+import entities.Student; // TODO change this to StudentManager or higher
 
 import java.io.*;
 //util
@@ -23,11 +23,12 @@ public class IOSerializable {
     public static final String CALENDARS_FILEPATH = "calendars.ser";
 
     /**
-     * Checks if the user has save files for all supported data types. Returns true if and only if all data types are saved.
+     * Checks if the user has save files for all supported data types.
+     * Returns true if and only if all data types are saved.
      * @return A boolean whether the user has save files.
      */
     public boolean hasSavedData() {
-        List<String> paths = Arrays.asList(STUDENTS_FILEPATH);
+        List<String> paths = List.of(STUDENTS_FILEPATH);
         //List<String> paths = Arrays.asList(EVENTS_FILEPATH, TASKS_FILEPATH, STUDENTS_FILEPATH, CALENDARS_FILEPATH)
         for (String path : paths) {
             if (!new File(path).exists()) return false;
@@ -40,6 +41,7 @@ public class IOSerializable {
             InputStream file = new FileInputStream(STUDENTS_FILEPATH);
             InputStream buffer = new BufferedInputStream(file);
             ObjectInput input = new ObjectInputStream(buffer);
+            //Please refer to specifications for explanation
             ArrayList<Student> recoveredStudents = (ArrayList<Student>) input.readObject();
             input.close();
             return recoveredStudents;
